[metadata]
name = unishox2-py3
version = 0.9.0
description = A package for unicode-friendly string compression using Unishox2
long_description = file: README.md
long_description_content_type = text/markdown
url = https://chris.partridge.tech/
author = Chris Partridge
author_email = tweedge-public@partridge.tech
license = Apache License 2.0
classifiers = 
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: C
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: System :: Archiving :: Compression
project_urls = 
    Source = https://github.com/tweedge/unishox2-py3