[metadata]
name = unishox2-py3
version = 0.9.2
description = A package for Unicode-friendly string compression using Unishox2
long_description = file: README.md
long_description_content_type = text/markdown
url = https://chris.partridge.tech/
author = Chris Partridge
author_email = tweedge-public@partridge.tech
license = Apache License 2.0
classifiers = 
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: C
    Programming Language :: Cython
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries
    Topic :: System :: Archiving :: Compression
project_urls = 
    Source = https://github.com/tweedge/unishox2-py3